--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,4 +36,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: tests
         run: |
-          pytest tests/
+          python -m pytest tests/
