--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,13 +32,13 @@ jobs:
           pip install -r requirements.txt
           pip install pytest
           
-      - name: Copy test to deploymentsfolder
-        run: |
-          cp -r tests ./project/main
-          ls ./project/main
+      #- name: Copy test to deploymentsfolder
+      #  run: |
+      #    cp -r tests ./project/main
+      #    ls ./project/main
 
 
       # Runs a set of commands using the runners shell
       - name: tests
         run: |
-          python -m pytest ./project/main/tests
+          python -m pytest tests
