--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest
-          
+          pip install -e
       #- name: Copy test to deploymentsfolder
       #  run: |
       #    cp -r tests ./project/main
