--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,7 +37,10 @@ jobs:
       #    cp -r tests ./project/main
       #    ls ./project/main
 
-
+      - name: freeze
+        run: |
+          pip freeze
+          
       # Runs a set of commands using the runners shell
       - name: tests
         run: |
